--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "customize-cra-less-loader": "^2.0.0",
     "less": "^4.1.3",
     "less-loader": "7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "rsuite": "^5.22.2",
+    "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
   },
