--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-json-tree": "^0.17.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-viewport-list": "^6.3.0-beta.0",
     "rsuite": "^5.22.2",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
