--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "less": "^4.1.3",
     "less-loader": "7",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-json-tree": "^0.17.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
