--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-viewport-list": "^6.3.0-beta.0",
     "rsuite": "^5.22.2",
     "sort-by": "^1.2.0",
+    "string-mask": "^0.3.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
   },
